Add task to table implementation

--- a/src/components/atoms/Style.css
+++ b/src/components/atoms/Style.css
@@ -42,3 +42,19 @@
   font-size: 0.875rem;
   /* padding: 0.86rem; */
 }
+
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
