--- a/src/components/molecules/NewTask/Style.css
+++ b/src/components/molecules/NewTask/Style.css
@@ -28,6 +28,7 @@ form .title {
   display: flex;
   flex-direction: column;
 }
+
 form button {
   padding: 0.5rem 1.34rem;
   box-shadow: 0px 8px 20px rgba(227, 232, 238, 0.24);
@@ -37,6 +38,8 @@ form button {
   border-color: transparent;
   background-color: #4ba8a8;
   color: #fff;
+    transition: all .5s;
+
 }
 form button:disabled,
 form button[disabled] {
@@ -62,6 +65,8 @@ form button[disabled] {
   align-items: center;
   justify-content: center;
   color: #232360;
+      transition: all .5s;
+
 }
 
 .add_collaborators .add_collaborator_btn:hover {
