--- a/src/components/atoms/Style.css
+++ b/src/components/atoms/Style.css
@@ -1,10 +1,5 @@
 .navlink_wrapper {
-  width: 2.875rem;
-  height: 2.813rem;
-  background-color: #005555;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: #fff;
   border-radius: 0.85rem;
   transition: all 0.5s;
 }
@@ -13,6 +8,29 @@
   background-color: #005555;
 }
 
+.navlink_wrapper svg {
+  fill: #5f6388;
+  margin: 0 auto;
+  transition: all 0.5s;
+}
+
+.navlinks .active {
+  background-color: #005555;
+}
+
+.active svg {
+  fill: #fff;
+}
+
+.logo_wrapper svg{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+.logo_wrapper {
+  width: 100%;
+  margin-bottom: 7.5rem;
+}
 .input_wrapper {
   display: flex;
   justify-content: space-between;
@@ -51,7 +69,9 @@ table {
   /* padding: 1.7rem 2.143rem 0 1.71rem; */
   transition: all 0.5s;
 }
-
+tr td {
+  color: #1e1e1e;
+}
 td,
 th {
   border: none;
@@ -59,39 +79,35 @@ th {
   text-align: left;
   padding: 0.57rem 0;
 }
-tr th{
+tr th {
   padding-top: 2rem;
+  color: #768396;
 }
 
-tr th:nth-child(1), tr td:nth-child(1){
+tr th:nth-child(1),
+tr td:nth-child(1) {
   padding-left: 1.71rem;
 }
- tr th:nth-child(6), tr td:nth-child(6){
+tr th:nth-child(6),
+tr td:nth-child(6) {
   padding-right: 3rem;
 }
 
-tr,
-tbody {
-  transition: all 0.5s;
-  /* padding: 2rem; */
-  /* border: 1px solid blue; */
+tr {
+  transition: all 0.1s;
 }
 th {
   text-transform: capitalize;
 }
-/* tr:nth-child(even) {
-  background-color: #dddddd;
-} */
+
 tr td:nth-child(5) label {
   display: block;
 }
-/* tr td:nth-child(6) label {
-} */
+
 table progress {
   height: 0.36rem;
   width: 11.57rem;
   border-radius: 0.43rem;
-  
 }
 
 table progress::-webkit-progress-bar {
