--- a/src/components/molecules/SummaryCard/Style.css
+++ b/src/components/molecules/SummaryCard/Style.css
@@ -4,7 +4,13 @@
   width: 31%;
   padding: 1.6rem 1rem 2.058rem;
   color: #768396;
+  transition: all .5s;
 }
+.card_wrapper:hover{
+    box-shadow: 0px 4px 8px rgba(248, 180, 0, 1);
+
+}
+
 .card_top {
   display: flex;
   justify-content: space-between;
