--- a/src/components/atoms/Style.css
+++ b/src/components/atoms/Style.css
@@ -22,10 +22,10 @@
   fill: #fff;
 }
 
-.logo_wrapper svg{
- display: flex;
- flex-direction: column;
- align-items: center;
+.logo_wrapper svg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .logo_wrapper {
   width: 100%;
@@ -128,6 +128,16 @@ tr:hover {
   background-color: #4ba8a8;
 }
 
-.emoji{
-  margin: .5rem;
+.emoji {
+  margin: 0.5rem 0.3rem;
+      padding: 0 0.2rem;
+
+  vertical-align: middle;
+  line-height: 2;
+  transition: all .5s;
+}
+
+.emoji:hover {
+  box-shadow: 0px 2px 4px rgba(248, 180, 0, 1);
+
 }
