Add hover effect to each of the sections

--- a/src/components/organisms/MainPage/Style.css
+++ b/src/components/organisms/MainPage/Style.css
@@ -28,31 +28,35 @@ main {
 #main_page_right_title {
   margin-bottom: 2rem;
 }
-.main_page_task_done{
+.main_page_task_done {
   background-color: #fff;
   margin: 1.5rem 0;
-    padding:1.71rem 1.71rem ;
-border-radius: 1.142rem;
+  padding: 1.71rem 1.71rem;
+  border-radius: 1.142rem;
 }
-.main_page_task_done_top, .main_page_task_done_right{
+.main_page_task_done:hover, .main_page_right:hover {
+  box-shadow: 0px 2px 4px rgba(248, 180, 0, 1);
+}
+.main_page_task_done_top,
+.main_page_task_done_right {
   display: flex;
   width: 100%;
   justify-content: space-between;
 }
-.main_page_task_done_right{
+.main_page_task_done_right {
   width: 34%;
 }
-.main_page_task_done_toggle{
+.main_page_task_done_toggle {
   padding: 0 0.64rem;
   color: #005555;
-  transition: all .5s;
+  transition: all 0.5s;
 }
-.main_page_task_done_toggle:focus{
-color: #F8B400;
-border-bottom: 2px solid #F8B400;
+.main_page_task_done_toggle:focus {
+  color: #f8b400;
+  border-bottom: 2px solid #f8b400;
 }
 
-.main_page_left_title{
+.main_page_left_title {
   font-size: 1.3rem;
   color: #005555;
   font-weight: 700;
