--- a/src/components/molecules/TaskList/Style.css
+++ b/src/components/molecules/TaskList/Style.css
@@ -10,3 +10,6 @@
   align-items: center;
   padding: 0 1.71rem;
 }
+.main_page_task_list:hover {
+  box-shadow: 0px 2px 4px rgba(248, 180, 0, 1);
+}
